--- a/Varaa-aika/style.css
+++ b/Varaa-aika/style.css
@@ -1,3 +1,16 @@
 .modal-body {
     background-color: lightgrey;
 }
+a:link{
+    color:gray;
+}
+a:hover{
+    color:yellow;
+}
+a:visited{
+    color:orange
+}
+th {
+    color:yellow;
+    padding:5px;
+}
