--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -15,3 +15,21 @@ div.aboutus{
     margin-left: 5px;
     
 }
+abbr[title]:after
+{
+   content: " (" attr(title) ")";
+}
+
+@media screen and (min-width: 800px)
+{
+   abbr[title]
+   {
+      border-bottom: 1px dashed #ADADAD;
+      cursor:help;
+   }
+
+   abbr[title]:after
+   {
+      content: "";
+   }
+}
