--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-body {
-    background-color: #bbb;
-}
 a:link{
     color:gray;
 }
@@ -16,6 +13,6 @@ th {
 }
 address{
    color: gray;
-   margin-bottom: 0px;
+   margin:0px;
 }
 
