--- a/css/css.css
+++ b/css/css.css
@@ -9,40 +9,27 @@ th {
     padding:5px;
 }
 .text-block1 {
-    position:absolute;
-    bottom: 30px;
-    right: 250px;
     background-color: black;
-    color: white;
-    padding-left: 40px;
-    padding-right: 80px;
-    padding-top:15px;
-    padding-bottom:15px;
-    border-radius: 5px;
+    width:50%;
+    padding:10px;
+    border-radius: 4px;
 }
+
 .text-block2 {
-    position:absolute;
-    bottom: 20px;
-    right: 700px;
     background-color: black;
-    color: white;
-    padding-left: 40px;
-    padding-right: 80px;
-    padding-top:15px;
-    padding-bottom:15px;
-    border-radius: 5px;
+    width:80%;
+    padding:10px;
+    border-radius: 4px;
 }
 .text-block3 {
-    position:absolute;
-    bottom: 40px;
-    right: 650px;
     background-color: black;
-    color: white;
-    padding-left: 40px;
-    padding-right: 80px;
-    padding-top:15px;
-    padding-bottom:15px;
-    border-radius: 5px;
+    width:70%;
+    padding:10px;
+    border-radius: 4px;
+}
+.carousel-inner img{
+    width: 100%;
+    height: 100%;
 }
 body{
   background-color: rgb(243, 239, 225);
